--- a/crudAndres/pom.xml
+++ b/crudAndres/pom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.6.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.crudAndres</groupId>
 	<artifactId>crudAndres</artifactId>
@@ -17,11 +18,11 @@
 	<properties>
 		<java.version>1.8</java.version>
 
-<!-- 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
-<!-- 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> -->
-<!-- 		<java.version>1.8</java.version> -->
-<!-- 		<jackson.version>2.8.10</jackson.version> -->
-<!-- 		<jaxb-api.version>2.2.11</jaxb-api.version> -->
+		<!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+		<!-- <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> -->
+		<!-- <java.version>1.8</java.version> -->
+		<!-- <jackson.version>2.8.10</jackson.version> -->
+		<!-- <jaxb-api.version>2.2.11</jaxb-api.version> -->
 
 	</properties>
 
@@ -31,8 +32,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
 		<dependency>
@@ -48,40 +49,40 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-<!-- 			<exclusions> -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.apache.tomcat</groupId> -->
-<!-- 					<artifactId>tomcat-jdbc</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
+			<!-- <exclusions> -->
+			<!-- <exclusion> -->
+			<!-- <groupId>org.apache.tomcat</groupId> -->
+			<!-- <artifactId>tomcat-jdbc</artifactId> -->
+			<!-- </exclusion> -->
+			<!-- </exclusions> -->
 		</dependency>
 		<dependency>
-            <groupId>com.oracle</groupId>
-            <artifactId>oracle</artifactId>
-            <version>12.2.0.1</version>
-        </dependency>
-        
-        <!-- dependencies andres to apirest -->
-<!--         <dependency> -->
-<!-- 			<groupId>com.fasterxml.jackson.core</groupId> -->
-<!-- 			<artifactId>jackson-databind</artifactId> -->
-<!-- 			<version>${jackson.version}</version> -->
-<!-- 		</dependency> -->
-	   
-<!-- 		<dependency> -->
-<!-- 			<groupId>javax.xml.bind</groupId> -->
-<!-- 			<artifactId>jaxb-api</artifactId> -->
-<!-- 			<version>${jaxb-api.version}</version> -->
-<!-- 			<scope>runtime</scope> -->
-<!-- 		</dependency> -->
-        <!-- dependencies andres to apirest -->
-        
-        
-<!--         <dependency> -->
-<!-- 			<groupId>com.zaxxer</groupId> -->
-<!-- 			<artifactId>HikariCP</artifactId> -->
-<!-- 		</dependency> -->
-		
+			<groupId>com.oracle</groupId>
+			<artifactId>oracle</artifactId>
+			<version>12.2.0.1</version>
+		</dependency>
+
+		<!-- dependencies andres to apirest -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
+		<!-- <artifactId>jackson-databind</artifactId> -->
+		<!-- <version>${jackson.version}</version> -->
+		<!-- </dependency> -->
+
+		<!-- <dependency> -->
+		<!-- <groupId>javax.xml.bind</groupId> -->
+		<!-- <artifactId>jaxb-api</artifactId> -->
+		<!-- <version>${jaxb-api.version}</version> -->
+		<!-- <scope>runtime</scope> -->
+		<!-- </dependency> -->
+		<!-- dependencies andres to apirest -->
+
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.zaxxer</groupId> -->
+		<!-- <artifactId>HikariCP</artifactId> -->
+		<!-- </dependency> -->
+
 	</dependencies>
 
 	<build>
