--- a/crudAndres/pom.xml
+++ b/crudAndres/pom.xml
@@ -18,18 +18,21 @@
 	<properties>
 		<java.version>1.8</java.version>
 
-		<!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
-		<!-- <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> -->
-		<!-- <java.version>1.8</java.version> -->
-		<!-- <jackson.version>2.8.10</jackson.version> -->
-		<!-- <jaxb-api.version>2.2.11</jaxb-api.version> -->
-
 	</properties>
 
 	<dependencies>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,40 +52,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<!-- <exclusions> -->
-			<!-- <exclusion> -->
-			<!-- <groupId>org.apache.tomcat</groupId> -->
-			<!-- <artifactId>tomcat-jdbc</artifactId> -->
-			<!-- </exclusion> -->
-			<!-- </exclusions> -->
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>oracle</artifactId>
 			<version>12.2.0.1</version>
 		</dependency>
-
-		<!-- dependencies andres to apirest -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.fasterxml.jackson.core</groupId> -->
-		<!-- <artifactId>jackson-databind</artifactId> -->
-		<!-- <version>${jackson.version}</version> -->
-		<!-- </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>javax.xml.bind</groupId> -->
-		<!-- <artifactId>jaxb-api</artifactId> -->
-		<!-- <version>${jaxb-api.version}</version> -->
-		<!-- <scope>runtime</scope> -->
-		<!-- </dependency> -->
-		<!-- dependencies andres to apirest -->
-
-
-		<!-- <dependency> -->
-		<!-- <groupId>com.zaxxer</groupId> -->
-		<!-- <artifactId>HikariCP</artifactId> -->
-		<!-- </dependency> -->
-
 	</dependencies>
 
 	<build>
