--- a/crudAndres/pom.xml
+++ b/crudAndres/pom.xml
@@ -55,8 +55,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.oracle</groupId>
-			<artifactId>oracle</artifactId>
-			<version>12.2.0.1</version>
+			<artifactId>ojdbc6</artifactId>
+			<version>11.2.0.3.0</version>
 		</dependency>
 	</dependencies>
 
