--- a/crudAndres/pom.xml
+++ b/crudAndres/pom.xml
@@ -56,9 +56,17 @@
 		<dependency>
 			<groupId>com.oracle</groupId>
 			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0.3.0</version>
+			<version>11.2.0.3</version>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>project.local</id>
+			<name>project</name>
+			<url>file:C:\Users\ELECTRONICA\.m2\repository</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
