--- a/crudAndres/pom.xml
+++ b/crudAndres/pom.xml
@@ -77,13 +77,14 @@
 		</plugins>
 	</build>
 	<distributionManagement>
-		<repository>
-			<uniqueVersion>false</uniqueVersion>
-			<id>corp1</id>
-			<name>Corporate Repository</name>
-			<url>scp://repo/maven2</url>
-			<layout>default</layout>
-		</repository>
-	</distributionManagement>
+    <repository>
+        <id>releases</id>
+        <url>http://domain:port/content/repositories/releases</url>
+    </repository>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <url>http://domain:port/content/repositories/snapshots</url>
+    </snapshotRepository>
+</distributionManagement>
 
 </project>
