--- a/crudAndres/pom.xml
+++ b/crudAndres/pom.xml
@@ -79,11 +79,11 @@
 	<distributionManagement>
     <repository>
         <id>releases</id>
-        <url>http://domain:port/content/repositories/releases</url>
+        <url>file:C:\Users\ELECTRONICA\.m2\repository</url>
     </repository>
     <snapshotRepository>
         <id>snapshots</id>
-        <url>http://domain:port/content/repositories/snapshots</url>
+        <url>file:C:\Users\ELECTRONICA\.m2\repository</url>
     </snapshotRepository>
 </distributionManagement>
 
